# embedded-serial-protocol

./: .gitignore  README.md
.github/workflows/: publish.yml
examples/Arduino/: README.md
examples/Arduino/sketches/basic_example/: basic_example.ino
protocol-implementation/C/: serial_protocol.c  serial_protocol.h  user_impl.h
protocol-implementation/C/src/: serial_protocol.c  serial_protocol.h  user_impl.h  version.h
protocol-implementation/C/test/: CMakeLists.txt  README.md  embedded_protocol_test.cc  unit_test_glue.h  user_impl.c
protocol-implementation/Kotlin/: settings.gradle.kts
protocol-implementation/Kotlin/lib/src/main/kotlin/serial/protocol/: Library.kt
protocol-implementation/Kotlin/lib/src/test/kotlin/serial/protocol/: LibraryTest.kt
protocol-implementation/Kotlin/serial-protocol/: build.gradle.kts
protocol-implementation/Kotlin/serial-protocol/src/main/kotlin/serial/protocol/: Library.kt  Version.kt
protocol-implementation/Python/: LICENSE  README.md  protocol.py  protocol_tests.py  pyproject.toml  user_impl.py  version.py
protocol-implementation/Python/src/: protocol.py  user_impl.py
protocol-implementation/Python/src/emb_ser_protocol/: protocol.py  version.py
protocol-implementation/Python/tests/emb_ser_protocol/: protocol_tests.py
utilities/packet-sniffer/: settings.gradle.kts
utilities/packet-sniffer/app/: build.gradle.kts
utilities/serial-tester/: .example_tester_config.json  README.md  protocol_tester.py
utilities/version/: get_version.sh  version.json  version.sh
(+3 files in other folders)
